force-app/zurich-base/main/default/objects/Contact/fields/Abandoned_Lead__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in order to identify the abandoned cart in step 1</description>
    <label>Abandoned Lead</label>
    <type>Checkbox</type>
</CustomField>