force-app/zurich-base/main/default/objects/Contact/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>