force-app/zurich-base/main/default/objects/Contact/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this contact is in the blacklist</description>
    <label>Blacklist</label>
    <type>Checkbox</type>
</CustomField>