force-app/zurich-base/main/default/objects/Contact/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(OCS/ZE). Destinado a gestionar la visibilidad del cliente debido a la GDPR. Último nivel de restricción de acceso. Anonimización de los datos sensibles o de identificación.</description>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>