force-app/zurich-base/main/default/objects/Contact/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the email has bounced or not</description>
    <label>Email rebotado</label>
    <type>Checkbox</type>
</CustomField>