force-app/zurich-base/main/default/objects/Contact/fields/CNO__c.field-meta.xml
<CustomField>
    <fullName>CNO__c</fullName>
    <description>A life lead or customer CNO</description>
    <label>CNO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>