force-app/zurich-base/main/default/objects/Contact/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <description>This formula field will show a picture stored as a static resource depending on the record type of the contact.</description>
    <formula>null</formula>
    <label>Tipo contacto</label>
    <type>Text</type>
</CustomField>