force-app/zurich-base/main/default/objects/Contact/fields/CreditCard__c.field-meta.xml
<CustomField>
    <fullName>CreditCard__c</fullName>
    <description>Last four digits from credit card</description>
    <label>4 últimos dígitos tarjeta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>