force-app/zurich-base/main/default/objects/Contact/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>