force-app/zurich-base/main/default/objects/Contact/fields/CustomerNum__c.field-meta.xml
<CustomField>
    <fullName>CustomerNum__c</fullName>
    <description>Code that IBA generates to identify a customer. As for life and non-life is the same number, for life record type, it will have prefix LIFE-XXX and for non-life GI-XXX</description>
    <externalId>true</externalId>
    <label>Customer Num</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>