force-app/zurich-base/main/default/objects/Contact/fields/date_sent_survey__c.field-meta.xml
<CustomField>
    <fullName>date_sent_survey__c</fullName>
    <label>Fecha de envío de encuesta</label>
    <type>Date</type>
</CustomField>