force-app/zurich-base/main/default/objects/Contact/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <description>A customer or lead DNI</description>
    <label>DNI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>