force-app/zurich-base/main/default/objects/Contact/fields/EmailHash__c.field-meta.xml
<CustomField>
    <fullName>EmailHash__c</fullName>
    <label>Email tarificador hash</label>
    <type>TextArea</type>
</CustomField>