force-app/zurich-base/main/default/objects/Contact/fields/ExistOtherLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>ExistOtherLegalEntity__c</fullName>
    <description>Formula that sets to true if account NumberOfContacts__c rollup field is greater than 1</description>
    <formula>Account.NumberOfContacts__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existe en otra entidad legal</label>
    <type>Checkbox</type>
</CustomField>