force-app/zurich-base/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mujer</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>