force-app/zurich-base/main/default/objects/Contact/fields/HashedId__c.field-meta.xml
<CustomField>
    <fullName>HashedId__c</fullName>
    <label>HashedId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>