force-app/zurich-base/main/default/objects/Contact/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>KLINC: Indica el número de IBAN</description>
    <label>IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>