force-app/zurich-base/main/default/objects/Contact/fields/InactiveContact__c.field-meta.xml
<CustomField>
    <fullName>InactiveContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive contact</label>
    <type>Checkbox</type>
</CustomField>