force-app/zurich-base/main/default/objects/Contact/fields/InfoCustomerContactNumber__c.field-meta.xml
<CustomField>
    <fullName>InfoCustomerContactNumber__c</fullName>
    <externalId>true</externalId>
    <label>Affiliation Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>