force-app/zurich-base/main/default/objects/Contact/fields/IntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryCode__c</fullName>
    <label>Código de intermediario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>