force-app/zurich-base/main/default/objects/Contact/fields/IsSubscriber__c.field-meta.xml
<CustomField>
    <fullName>IsSubscriber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KLINC: Indica si un contacto se ha dado de alta como suscriptor en la newsletter. Se rellena en el procesamiento tras darse de alta mediante el formulario Web-to-Lead.</description>
    <label>Subscriber</label>
    <type>Checkbox</type>
</CustomField>