force-app/zurich-base/main/default/objects/Contact/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <description>Life lead or customer job</description>
    <label>Profesión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Agricultor, ganadero de reses no bravas</fullName>
            </value>
            <value>
                <fullName>Escoger...</fullName>
            </value>
            <value>
                <fullName>Director de cine y espectáculos</fullName>
            </value>
            <value>
                <fullName>Pastelero, panadero y cocinero</fullName>
            </value>
            <value>
                <fullName>Boxeador Professional</fullName>
            </value>
            <value>
                <fullName>Antidisturbios: Policía Municipal, Autonómica y Guardia Civil</fullName>
            </value>
            <value>
                <fullName>Administrativo: Policía Municipal, Autonómica y Guardia Civil</fullName>
            </value>
            <value>
                <fullName>Guarda Jurado armado, vigilante seguridad armado</fullName>
            </value>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Óptico y/u optometrista y otorrinolaringólogo</fullName>
            </value>
            <value>
                <fullName>Piloto</fullName>
            </value>
            <value>
                <fullName>Ingeniería (técnico, naval, industrial, montes y caminos, agrónomo y aeronáutico)</fullName>
            </value>
            <value>
                <fullName>Controlador aéreo</fullName>
            </value>
            <value>
                <fullName>Mediador de seguros</fullName>
            </value>
            <value>
                <fullName>Joyero, relojero y reparador de electrodomésticos</fullName>
            </value>
            <value>
                <fullName>Periodista, presentador e intérprete</fullName>
            </value>
            <value>
                <fullName>Artista, decorador, restaurador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>