force-app/zurich-base/main/default/objects/Contact/fields/JobPosition__c.field-meta.xml
<CustomField>
    <fullName>JobPosition__c</fullName>
    <description>A life lead or customer job position</description>
    <label>Posición de trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>