force-app/zurich-base/main/default/objects/Contact/fields/LastPolicyDate__c.field-meta.xml
<CustomField>
    <fullName>LastPolicyDate__c</fullName>
    <description>Indicates when has been the date of the last contracted policy</description>
    <label>Fecha última póliza contratada</label>
    <type>Date</type>
</CustomField>