force-app/zurich-base/main/default/objects/Contact/fields/LastQuote__c.field-meta.xml
<CustomField>
    <fullName>LastQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastQuote</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>