force-app/zurich-base/main/default/objects/Contact/fields/MasterPolicy__c.field-meta.xml
<CustomField>
    <fullName>MasterPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies if the contact comes from a partner. Linked to the partner acccount.</description>
    <label>Masterpolicy</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>