force-app/zurich-base/main/default/objects/Contact/fields/MasterPolicyDesc__c.field-meta.xml
<CustomField>
    <fullName>MasterPolicyDesc__c</fullName>
    <description>Not visible field in the page layout and used to copy its value to account Name field after parsing it in the parser.</description>
    <label>Masterpolicy description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>