force-app/zurich-base/main/default/objects/Contact/fields/MasterPolicyNum__c.field-meta.xml
<CustomField>
    <fullName>MasterPolicyNum__c</fullName>
    <label>Masterpolicy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>