force-app/zurich-base/main/default/objects/Contact/fields/MonthExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>MonthExpiryDate__c</fullName>
    <description>Month expiry date from credit card</description>
    <label>Mes expiración tarjeta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>