force-app/zurich-base/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Español</fullName>
            </value>
            <value>
                <fullName>España</fullName>
            </value>
            <value>
                <fullName>Francia</fullName>
            </value>
            <value>
                <fullName>Afganistan</fullName>
            </value>
            <value>
                <fullName>Alemania</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Danés</fullName>
            </value>
            <value>
                <fullName>Noruego</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Finlandés</fullName>
            </value>
            <value>
                <fullName>Irlanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>