force-app/zurich-base/main/default/objects/Contact/fields/NumClaims__c.field-meta.xml
<CustomField>
    <fullName>NumClaims__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of claims made for that customer</description>
    <label>Número de siniestros</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>