force-app/zurich-base/main/default/objects/Contact/fields/NumPolicies__c.field-meta.xml
<CustomField>
    <fullName>NumPolicies__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active policies for that customer</description>
    <label>Número de pólizas</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>