force-app/zurich-base/main/default/objects/Contact/fields/NumQuotes__c.field-meta.xml
<CustomField>
    <fullName>NumQuotes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Número de quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>