force-app/zurich-base/main/default/objects/Contact/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permiso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Total sin administración</fullName>
            </value>
            <value>
                <fullName>Ofertas</fullName>
            </value>
            <value>
                <fullName>Consulta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>