force-app/zurich-base/main/default/objects/Contact/fields/receiveMarketing__c.field-meta.xml
<CustomField>
    <fullName>receiveMarketing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Recibir marketing</label>
    <type>Checkbox</type>
</CustomField>