force-app/zurich-base/main/default/objects/Contact/fields/Satisfaccion__c.field-meta.xml
<CustomField>
    <fullName>Satisfaccion__c</fullName>
    <label>Satisfacción</label>
    <length>100</length>
    <type>Text</type>
</CustomField>