force-app/zurich-base/main/default/objects/Contact/fields/SincronizarMC__c.field-meta.xml
<CustomField>
    <fullName>SincronizarMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sincronizar a MC</label>
    <type>Checkbox</type>
</CustomField>