force-app/zurich-base/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>