force-app/zurich-base/main/default/objects/Contact/fields/SyncTestMC__c.field-meta.xml
<CustomField>
    <fullName>SyncTestMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Test MC</label>
    <type>Checkbox</type>
</CustomField>