force-app/zurich-base/main/default/objects/Contact/fields/Trigger_Time_Abandoned_Lead__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_Abandoned_Lead__c</fullName>
    <formula>(Now() - 0.03109)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time Abandoned Lead</label>
    <type>DateTime</type>
</CustomField>