force-app/zurich-base/main/default/objects/Contact/fields/UnsubscribedDate__c.field-meta.xml
<CustomField>
    <fullName>UnsubscribedDate__c</fullName>
    <description>Indicates the date that a contact unsubscribes</description>
    <label>Fecha desuscripción</label>
    <type>DateTime</type>
</CustomField>