force-app/zurich-base/main/default/objects/Contact/fields/UnsubscribedSource__c.field-meta.xml
<CustomField>
    <fullName>UnsubscribedSource__c</fullName>
    <description>Specifies which has been the origin of the unsuscription</description>
    <label>Origen desuscripción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESP</fullName>
            </value>
            <value>
                <fullName>Centro de preferencias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>