force-app/zurich-base/main/default/objects/Contact/fields/YearExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>YearExpiryDate__c</fullName>
    <description>Year expiry date from credit card</description>
    <label>Año expiración tarjeta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>