force-app/zurich-base/main/default/objects/Contact/fields/ZurichZoneUser__c.field-meta.xml
<CustomField>
    <fullName>ZurichZoneUser__c</fullName>
    <label>Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>