force-app/zurich-base/main/default/objects/Contact/recordTypes/AgentMediator.recordType-meta.xml
<RecordType>
    <fullName>AgentMediator</fullName>
    <active>true</active>
    <description>Destinado a agentes y mediadores pertenecientes a Intermediarios</description>
    <label>Agent/Mediator</label>
</RecordType>