force-app/zurich-base/main/default/objects/Contact/recordTypes/CommunityUser.recordType-meta.xml
<RecordType>
    <fullName>CommunityUser</fullName>
    <active>true</active>
    <description>Contacto para los usuarios de la comunidad de ZRM</description>
    <label>Community User</label>
</RecordType>