force-app/zurich-base/main/default/objects/Contact/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <description>Record type for business contacts</description>
    <label>Contact</label>
</RecordType>