force-app/zurich-base/main/default/objects/Contact/recordTypes/ContactPartner.recordType-meta.xml
<RecordType>
    <fullName>ContactPartner</fullName>
    <active>true</active>
    <label>Contacto Partner</label>
</RecordType>