force-app/zurich-base/main/default/objects/Contact/recordTypes/CustomerGI.recordType-meta.xml
<RecordType>
    <fullName>CustomerGI</fullName>
    <active>true</active>
    <label>Cliente no vida</label>
</RecordType>