force-app/zurich-base/main/default/objects/Contact/recordTypes/CustomerLife.recordType-meta.xml
<RecordType>
    <fullName>CustomerLife</fullName>
    <active>true</active>
    <label>Cliente vida</label>
</RecordType>