force-app/zurich-base/main/default/objects/Contact/recordTypes/LeadGI.recordType-meta.xml
<RecordType>
    <fullName>LeadGI</fullName>
    <active>true</active>
    <label>Lead no vida</label>
</RecordType>