force-app/zurich-base/main/default/objects/Contact/recordTypes/LeadLife.recordType-meta.xml
<RecordType>
    <fullName>LeadLife</fullName>
    <active>true</active>
    <label>Lead vida</label>
</RecordType>