force-app/zurich-base/main/default/objects/Contact/recordTypes/SAM_Partner.recordType-meta.xml
<RecordType>
    <fullName>SAM_Partner</fullName>
    <active>true</active>
    <description>Para los contactos de los Partner y los Proveedores del equipo SAM</description>
    <label>SAM Partner</label>
</RecordType>