force-app/zurich-base/main/default/objects/Contact/validationRules/ContactPartnerOnlyAccountPartner.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactPartnerOnlyAccountPartner</fullName>
    <active>true</active>
    <description>[VR Contacto] Los Contactos Partner solo se pueden vincular con Cuentas Partner</description>
    <errorConditionFormula>AND
(
 
  OR
  (
    NOT(ISCHANGED(Blocked__c)),
    NOT(ISCHANGED(Anonymized__c)),
    Blocked__c = FALSE,
    Anonymized__c = FALSE
  ),
     RecordType.DeveloperName == &quot;ContactPartner&quot; &amp;&amp;  
     Account.RecordType.DeveloperName!=&quot;PartnerOCS&quot;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>[VR Contacto] Los Contactos Partner solo se pueden vincular con Cuentas Partner</errorMessage>
</ValidationRule>