force-app/zurich-base/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>LegalEntity__c</columns>
    <columns>CustomerNum__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>NumPolicies__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>