force-app/zurich-base/main/default/objects/Contact/listViews/Clientes.listView-meta.xml
<ListView>
    <fullName>Clientes</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>LegalEntity__c</columns>
    <columns>CustomerNum__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Activo</value>
    </filters>
    <label>Clientes</label>
    <sharedTo>
        <role>Customer_Care</role>
        <role>KLINC_Global</role>
    </sharedTo>
</ListView>