force-app/zurich-base/main/default/objects/Contact/listViews/EMEA_France_Contacts.listView-meta.xml
<ListView>
    <fullName>EMEA_France_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceCountry__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>EMEA France Contacts</label>
</ListView>