force-app/zurich-base/main/default/objects/Contact/listViews/EMEA_Germany_Contacts.listView-meta.xml
<ListView>
    <fullName>EMEA_Germany_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SourceCountry__c</field>
        <operation>equals</operation>
        <value>Germany</value>
    </filters>
    <label>EMEA Germany Contacts</label>
</ListView>