force-app/zurich-base/main/default/objects/Contact/listViews/Leads.listView-meta.xml
<ListView>
    <fullName>Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LegalEntity__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CustomerNum__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Leads</label>
</ListView>