force-app/zurich-base/main/default/objects/Contact/listViews/Orange_Customers.listView-meta.xml
<ListView>
    <fullName>Orange_Customers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
        <value>Orange Seguros</value>
    </filters>
    <label>Orange Customers</label>
</ListView>